@@ -1,5 +1,8 @@
 2007-09-13  Goedson Teixeira Paixao  <goedson@debian.org>
 
+	* doc/C/gnotime.xml: fixed some typos and reviewed the text for
+	sections 1 to 3.
+
 	* src/export.c (export_err, export_really): Use gtk_message_dialog
 	instead of the deprecated gnome_error_dialog
 	(export_file_picker): Use GtkFileChooser instead of the deprecated
